--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
                 <div class="bottom-footer">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="copy-right">Copyright &copy; 2023 Shashank & Aditya. All rights reserved.</div>
+                            <div class="copy-right">Copyright &copy; 2023 <a href="https://www.linkedin.com/in/shashankdixit2004/">Shashank</a> & <a href="https://www.linkedin.com/in/aditya-mathur-0ab081281/">Aditya</a>. All rights reserved.</div>
                         </div>
                         <div class="col-md-6">
                             <div class="legal-list">
