--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                     <h2 class="blog-section-title text-center">Company Visited</h2>
                     <p class="blog-section-info text-center">
                         Various companies visited our college for placements.</p>
-                </div>0
+                </div>
                 <div class="container">
                     
                     <div class="client-slider text-center">
