--- a/index.html
+++ b/index.html
@@ -68,13 +68,11 @@
                                             <a href="#">About Us</a>
                                             <ul>
                                                 <li>
-                                                    <a href="categories.html">Courses</a>
+                                                    <a href="categories.html">About Us</a>
                                                 </li>
+                                                
                                                 <li>
-                                                    <a href="feature-course.html">Teachers</a>
-                                                </li>
-                                                <li>
-                                                    <a href="course-detail.html">Principal</a>
+                                                    <a href="course-detail.html">Principal Message</a>
                                                 </li>
                                                 
                                             </ul>
@@ -83,7 +81,7 @@
                                             <a href="blog-archive.html">Galery</a>
                                         </li>
                                         <li class="menu-item-has-children">
-                                            <a href="#">MerChant</a>
+                                            <a href="#">MerChandise</a>
                                             <ul>
                                                 <li>
                                                     <a href="product-archive.html">1st Year</a>
