--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- css -->
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Home – Educator - University & School Education HTML5 Template</title>
+    <title>GGP Tilhar</title>
 </head>
 
 <body class="home">
