--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="assets/img/educator-fabicon-300x300.png">
+    <link rel="icon" type="image/png" href="assets/img/images/gps.gif">
     
     <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css" media="all">
   
