--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
                                     <h1>Providing Best Education For Brighter future</h1>
                                 </div>
                                 <div class="banner-text">
-                                    <p>Per sed, mattis. Integer viverra euismod maecenas incidunt, phasellus consequatur
-                                        aliquam nihil temporibus in assumens deserunt convallis. Inceptos per
-                                        consectetur consequatur proin.</p>
+                                    <p>"Education is the key to a brighter future. By providing the best education possible,
+                                        we can help our children reach their full potential and build a better world."</p>
                                 </div>
                                 <div class="banner-button">
                                     <a href="http://localhost/educator/single-blog.html"
